# sensor-hub

./: README.md  pyproject.toml  tasks.txt
app/: main.py
app/api/: alerts.py  analytics.py  devices.py  firmware.py  telemetry.py
app/config/: redis.yaml  settings.py
app/core/: circuit_breaker.py  event_bus.py  locks.py  rate_limiter.py  redis_client.py  saga.py
app/middleware/: backpressure.py  rate_limit.py
app/models/: alert.py  analytics.py  device.py  firmware.py  telemetry.py
app/services/: alert_service.py  analytics_service.py  device_service.py  firmware_service.py  orchestrator_service.py  telemetry_service.py
app/storage/: alert_store.py  device_store.py  event_store.py  firmware_store.py  telemetry_store.py
tests/: conftest.py  test_alerts.py  test_analytics.py  test_devices.py  test_firmware.py  test_integration.py  test_telemetry.py
