[tool.poetry]
name = "app"
version = "1.0.0"
description = "IoT platform for device management and telemetry"
authors = ["SensorHub Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.0"
starlette = "^0.27.0"
uvicorn = "^0.24.0"
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
redis = "^5.0.0"
pyyaml = "^6.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
requests = "^2.31.0"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
